# GeneralsMobile

./: CMakeLists.txt  CMakePresets.json  README.md
Android/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/generals/mobile/: MainActivity.java
Android/app/src/main/jni/: android_main.cpp
Android/app/src/main/res/values/: strings.xml  themes.xml
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/Common/: GameMemory.h
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Source/StdDevice/Common/: StdBIGFileSystem.cpp  StdLocalFileSystem.cpp
Core/Libraries/Include/Lib/: BaseType.h
Core/Libraries/Source/WWVegas/: CMakeLists.txt
Core/Libraries/Source/WWVegas/WW3D2/: FramGrab.cpp  agg_def.cpp  agg_def.h  dx8webbrowser.cpp  font3d.cpp  framgrab.h  render2dsentence.cpp  render2dsentence.h  rendobj.cpp  surfaceclass.cpp  w3d_dep.cpp
Core/Libraries/Source/WWVegas/WWAudio/: AudibleSound.h  AudioEvents.h  SoundBuffer.h  SoundScene.cpp  SoundSceneObj.h  WWAudio.h
Core/Libraries/Source/WWVegas/WWDownload/: FTP.cpp  ftp.h  registry.cpp
Core/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt  DbgHelpGuard.cpp  DbgHelpLoader.cpp  DbgHelpLoader.h  SystemAllocator.h  always.h  bittype.h  buff.cpp  mempool.h  stringex.h  win.h  wwstring.h
Core/Libraries/Source/WWVegas/WWMath/: wwmath.h
Core/Libraries/Source/WWVegas/WWSaveLoad/: persistfactory.h
Core/Tools/PATCHGET/: CMakeLists.txt
Core/Tools/matchbot/: CMakeLists.txt
Dependencies/Utility/: osdep.h
Dependencies/Utility/Utility/: compat.h
Dependencies/Utility/osdep/: osdep.h
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngine/Include/GameNetwork/: GameSpy.h
Generals/Code/GameEngine/Source/GameNetwork/: GUIUtil.cpp
Generals/Code/GameEngineDevice/: CMakeLists.txt
Generals/Code/GameEngineDevice/Include/AndroidDevice/Audio/: AndroidAudioManager.h
Generals/Code/GameEngineDevice/Include/AndroidDevice/Common/: AndroidGameEngine.h  AndroidUIScale.h
Generals/Code/GameEngineDevice/Include/AndroidDevice/GameClient/: AndroidKeyboard.h  AndroidTouchInput.h  AndroidVideoPlayer.h  AndroidVirtualControls.h
Generals/Code/GameEngineDevice/Include/W3DDevice/GameClient/: W3DGameClient.h
Generals/Code/GameEngineDevice/Source/AndroidDevice/Audio/: AndroidAudioManager.cpp
Generals/Code/GameEngineDevice/Source/AndroidDevice/Common/: AndroidGameEngine.cpp  AndroidOSDisplay.cpp  AndroidUIScale.cpp
Generals/Code/GameEngineDevice/Source/AndroidDevice/GameClient/: AndroidTouchInput.cpp  AndroidVideoPlayer.cpp  AndroidVirtualControls.cpp
Generals/Code/Libraries/: CMakeLists.txt
Generals/Code/Libraries/Source/DX8Wrapper/: CMakeLists.txt
Generals/Code/Libraries/Source/DX8Wrapper/Include/: GLESIndexBuffer8.h  GLESShader.h  GLESShaderTranslator.h  GLESSurface8.h  GLESTexture8.h  GLESVertexBuffer8.h  d3dx8.h  d3dx8math.h  ddraw.h  mmsystem.h  objbase.h  windows.h
Generals/Code/Libraries/Source/DX8Wrapper/Source/: Direct3D8.cpp  Direct3DDevice8.cpp  Direct3DDevice8.h  GLESIndexBuffer8.cpp  GLESShader.cpp  GLESShaderTranslator.cpp  GLESSurface8.cpp  GLESTexture8.cpp  GLESVertexBuffer8.cpp  d3dx8math.cpp
Generals/Code/Libraries/Source/WWVegas/: CMakeLists.txt
Generals/Code/Libraries/Source/WWVegas/WW3D2/: assetmgr.cpp  dx8wrapper.cpp  part_ldr.cpp  ww3d.cpp
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/Precompiled/: PreRTS.h
GeneralsMD/Code/GameEngine/Source/Common/: GlobalData.cpp  Recorder.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/GUICallbacks/: ReplayControls.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/GUICallbacks/Menus/: PopupReplay.cpp  ReplayMenu.cpp
GeneralsMD/Code/Libraries/Source/WWVegas/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/: assetmgr.cpp  dx8caps.cpp  dx8wrapper.cpp  motchan.cpp  part_ldr.cpp  ww3d.cpp
Libraries/Source/DX8Wrapper/: CMakeLists.txt
cmake/: config-build.cmake
cmake/toolchains/: android.cmake
